Fix dark mode close search button

--- a/css/new-design/dark-mode.css
+++ b/css/new-design/dark-mode.css
@@ -57,3 +57,9 @@ html.dark-mode .gitj76qy {
 .tdjehn4e {
 	background-color: var(--secondary-button-background-floating) !important;
 }
+
+/* Search results: Close button */
+/* TODO: Remove when fixed by fb, since --always-white is not good here */
+.q2y6ezfg {
+	background-color: var(--secondary-button-background) !important;
+}
